[tool.poetry]
name = "desktopbuddy"
version = "0.1.0"
description = ""
authors = ["chungchunwang <62127500+chungchunwang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
browser-history = "^0.4.1"
keyboard = "^0.13.5"
webui2 = "^2.4.5"
transformers = {version = ">=4.30", extras = ["torch"]}
pillow = "^10.4.0"
datasets = "^3.0.1"
openvino = ">=2023.1.0"
matplotlib = "^3.9.2"
gradio = ">=4.19"
nncf = ">=2.6.0"
torch = ">=2.1"
lancedb = "^0.14.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
